SAR Blai Sandbox/src/objects/NOC__c.object
<CustomObject>
    <fields>
        <fullName>Acciones_de_la_campana__c</fullName>
        <label>Acciones de la campaña</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alcance__c</fullName>
        <inlineHelpText>Campo informativo</inlineHelpText>
        <label>Alcance</label>
        <picklist>
            <picklistValues>
                <fullName>Nacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zona Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zona Territorial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centros</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Anexo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anexo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ano_Tarifa__c</fullName>
        <label>Año Tarifa</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Area_de_validacion_tecnica__c</fullName>
        <inlineHelpText>Campo obligatorio si se requiere de validación técnica</inlineHelpText>
        <label>Área de validación técnica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aspectos_economicos__c</fullName>
        <label>Aspectos económicos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Aspectos_no_economicos__c</fullName>
        <label>Aspectos no económicos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bloqueado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bloqueado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cambio_de_grado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cambio de grado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cambio_de_tarifa_dia_a_mes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cambio de tarifa día a mes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Centro__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>En caso que aplique a un centro en concreto</inlineHelpText>
        <label>Centro</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAeAAAW</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NOCs</relationshipLabel>
        <relationshipName>NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Centro_de_ingreso__c</fullName>
        <formula>CASE( RecordType.Name , &quot;NOC 11 Descuento Personal Puntual&quot;,   Oportunidad__r.Centro2__r.Name , &quot;NOC 11 Descuento Personal Renegociado&quot;,  Oportunidad_renegociada__r.Centro2__r.Name ,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Centro de ingreso</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAe0AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NOCs 11 Renegociada</relationshipLabel>
        <relationshipName>NOCs2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Codigo_RES__c</fullName>
        <formula>IF(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos;,  Oportunidad__r.Residente__r.IdNAV_RES__c  , Oportunidad_renegociada__r.IdNav_RES__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Código RES</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comentarios__c</fullName>
        <inlineHelpText>Campo obligatorio si tipo solicitud=presentación</inlineHelpText>
        <label>Comentarios</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Comentarios_de_aprobacion__c</fullName>
        <label>Comentarios de aprobacion</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Condiciones_Especiales__c</fullName>
        <label>Condiciones Especiales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contador_NOC__c</fullName>
        <displayFormat>NOC{0000000000}</displayFormat>
        <externalId>true</externalId>
        <label>Contador NOC</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Coste__c</fullName>
        <label>Coste</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dataloader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control de si es registro de carga inicial</description>
        <label>Dataloader</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descenso_de_Ocupacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descenso de Ocupación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descripcion__c</fullName>
        <label>Descripción</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Descuento_Fundacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento Fundación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descuento_Mes_1__c</fullName>
        <label>Descuento Periodo 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Mes_2__c</fullName>
        <label>Descuento Periodo 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_Mes_3__c</fullName>
        <label>Descuento Periodo 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento__c</fullName>
        <formula>1-(Precio_propuesto__c  /   Precio_actual__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Descuento</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_aplicado__c</fullName>
        <label>Descuento aplicado</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Descuento_de_Empleado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento de Empleado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descuento_de_Matrimonio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento de Matrimonio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Descuento_permanente__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Descuento permanente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detalle_Medios_Coumunicacion__c</fullName>
        <inlineHelpText>Campo obligatorio si Medios de comunicación= Prensa o Radio</inlineHelpText>
        <label>Detalle Medios Coumunicación</label>
        <picklist>
            <picklistValues>
                <fullName>Prensa Nacional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revistas Especializadas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Folletos y Flyers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Microespacio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cuñas Publicitas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Diferencial_de_tarifas__c</fullName>
        <label>Diferencial de tarifas</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Division2__c</fullName>
        <formula>CASE( RecordType.Name , &quot;NOC 11 Descuento Personal Puntual&quot;, TEXT(Oportunidad__r.Centro2__r.Division__c) , &quot;NOC 11 Descuento Personal Renegociado&quot;, TEXT(Oportunidad_renegociada__r.Centro2__r.Division__c),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>División (NOC 11 Persona)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_NOC_11_centro__c</fullName>
        <formula>TEXT( Centro__r.Division__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>División (NOC 11 centro)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>División</label>
        <picklist>
            <picklistValues>
                <fullName>Residencial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adorea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAR Domus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Domiciliaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Teleasistencia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CEX</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domiciliaria__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Domiciliaria</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Duracion_del_descuento__c</fullName>
        <inlineHelpText>Sólo para la división Residencial</inlineHelpText>
        <label>Duración del descuento en días</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_del_descuento_meses__c</fullName>
        <inlineHelpText>Sólo para la división Residencial</inlineHelpText>
        <label>Duración del descuento en meses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Duracion_en_dias__c</fullName>
        <formula>Fecha_fin__c - Fecha_inicio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duración en días</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estado_Campana__c</fullName>
        <label>Estado Campaña</label>
        <picklist>
            <picklistValues>
                <fullName>Creada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Abierta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cerrada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactiva</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estado_Flujo__c</fullName>
        <label>Estado Flujo</label>
        <picklist>
            <picklistValues>
                <fullName>Pendiente</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aprobado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rechazado</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_1__c</fullName>
        <label>Fecha Fin 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_2__c</fullName>
        <label>Fecha Fin 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Fin_3__c</fullName>
        <label>Fecha Fin 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Firma__c</fullName>
        <label>Fecha Firma</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Inicio_1__c</fullName>
        <label>Fecha Inicio 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Inicio_2__c</fullName>
        <label>Fecha Inicio 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_Inicio_3__c</fullName>
        <label>Fecha Inicio 3</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_fin__c</fullName>
        <inlineHelpText>Periodo en el que puede utilizarse la NOC</inlineHelpText>
        <label>Fecha fin</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_fin_flujo__c</fullName>
        <label>Fecha fin flujo</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_inicio__c</fullName>
        <inlineHelpText>Periodo en el que puede utilizarse la NOC</inlineHelpText>
        <label>Fecha inicio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fecha_intervencion__c</fullName>
        <label>Fecha intervención</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fianza_a_cobrar__c</fullName>
        <label>% Fianza a cobrar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Grado_NT__c</fullName>
        <formula>TEXT( Nueva_Tarifa__r.Servicio__r.Grado_Dependencia__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grado__c</fullName>
        <formula>IF( RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;,TEXT( Oportunidad_renegociada__r.Servicio__r.Grado_Dependencia__c) ,  TEXT( Oportunidad__r.Servicio__r.Grado_Dependencia__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grado</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_Recomendador_T24__c</fullName>
        <formula>Recomendador__r.Id_T24__c</formula>
        <label>Id Recomendador T24</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id_contrato__c</fullName>
        <label>Id contrato</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Importe_Fianza_a_cobrar__c</fullName>
        <label>Importe Fianza a cobrar</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importe_Mes_1__c</fullName>
        <label>Importe Periodo 1</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importe_Mes_2__c</fullName>
        <label>Importe Periodo 2</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Importe_Mes_3__c</fullName>
        <label>Importe Periodo 3</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Incremento_medio_para_clientes_actuales__c</fullName>
        <label>Incremento medio para clientes actuales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Incremento_medio_para_nuevos_clientes__c</fullName>
        <label>Incremento medio para nuevos clientes</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Jornadas__c</fullName>
        <inlineHelpText>Campo obligatorio si tipo= Jornadas y otros eventos</inlineHelpText>
        <label>Jornadas</label>
        <picklist>
            <picklistValues>
                <fullName>Corporativas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas de centro dirigidas a profesionales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas de centro dirigidas a familiares y vecindad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>La_presentacion_incluye_contenido__c</fullName>
        <defaultValue>false</defaultValue>
        <label>La presentación incluye contenido</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limite_de_plazas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Límite de plazas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Limite_de_plazas_en_rotacion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Límite de plazas en rotación</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medios_de_Comunicacion__c</fullName>
        <inlineHelpText>Campo obligatorio si tipo=Medios de comunicación</inlineHelpText>
        <label>Medios de Comunicación</label>
        <picklist>
            <picklistValues>
                <fullName>Buzoneo/Mailing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guias</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailing Smartfocus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mupis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pancarta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prensa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Publcidad Autobus y Metro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Valla Publicitaria</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mensaje_lineas_a_transmiti__c</fullName>
        <label>Mensaje/ líneas a transmiti</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Motivos_aprobacion__c</fullName>
        <label>Motivos aprobación</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Necesaria_validacion_Direccion_General__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Necesaria validación Dirección General</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_se_solicita_fianza__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No se solicita fianza</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nombre_Residente__c</fullName>
        <formula>IF(RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal&apos;,   Oportunidad__r.Residente__r.FirstName  &amp; &apos; &apos; &amp; Oportunidad__r.Residente__r.LastName  ,   Oportunidad_renegociada__r.Residente__r.FirstName  &amp; &apos; &apos; &amp; Oportunidad_renegociada__r.Residente__r.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nombre Residente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nueva_Tarifa__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nueva Tarifa</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tarifa__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBcHAAW</value>
            </filterItems>
            <filterItems>
                <field>Tarifa__c.Tarifa_Vigente__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tarifa__c</referenceTo>
        <relationshipLabel>NOCs</relationshipLabel>
        <relationshipName>NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nueva_tarifa_oficial__c</fullName>
        <formula>Nueva_Tarifa__r.Precio__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Nueva tarifa oficial</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Numero_de_plazas__c</fullName>
        <label>Número de plazas</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_plazas_en_rotacion__c</fullName>
        <label>Número de plazas en rotación</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_plazas_en_rotacion_libres__c</fullName>
        <label>Número de plazas en rotación libres</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Numero_de_plazas_libres__c</fullName>
        <label>Número de plazas libres</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Objeto_de_la_comunicacion_tematica__c</fullName>
        <label>Objeto de la comunicación/temática</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Oportunidad__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Oportunidad_platform__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBG6AAO</value>
            </filterItems>
            <filterItems>
                <field>Oportunidad_platform__c.Etapa__c</field>
                <operation>equals</operation>
                <value>Pendiente visita, Presentado Plan Personal, Visita Planificada / Espontánea</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Oportunidad_platform__c</referenceTo>
        <relationshipLabel>NOCs</relationshipLabel>
        <relationshipName>NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Oportunidad_renegociada__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oportunidad renegociada</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>No se puede asignar una NOC Personal a una oportunidad cerrada. Debéis usar la NOC Renegociada</errorMessage>
            <filterItems>
                <field>Oportunidad_platform__c.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QBG6AAO</value>
            </filterItems>
            <filterItems>
                <field>Oportunidad_platform__c.Etapa__c</field>
                <operation>equals</operation>
                <value>Ingreso</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Oportunidad_platform__c</referenceTo>
        <relationshipLabel>NOCs (Oportunidad renegociada)</relationshipLabel>
        <relationshipName>NOCs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Otros_motivos__c</fullName>
        <label>Otros motivos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Persona_que_interviene__c</fullName>
        <label>Persona que interviene</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Precio_actual__c</fullName>
        <formula>Oportunidad_renegociada__r.Precio_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_propuesto__c</fullName>
        <inlineHelpText>IVA incluido</inlineHelpText>
        <label>Precio propuesto</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Precio_propuesto_op__c</fullName>
        <formula>Oportunidad_renegociada__r.Precio_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Precio propuesto op</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ratio_de_ocupacion_actual__c</fullName>
        <label>Ratio de ocupación actual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recomendador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recomendador</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Id</field>
                <operation>equals</operation>
                <value>012b0000000QAd7AAG</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>NOCs (Recomendador)</relationshipLabel>
        <relationshipName>NOCs1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renegociado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renegociado</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residencial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Residencial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retorno_de_inversion__c</fullName>
        <label>Retorno de inversión</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ServicioDiferente__c</fullName>
        <formula>IF( NOT(ISBLANK(TEXT(Oportunidad__r.Servicio__r.Tipo_Servicio__c))),
   IF( AND(
   	NOT(ISBLANK(TEXT(Oportunidad_renegociada__r.Servicio__r.Tipo_Servicio__c ))),
	TEXT(Oportunidad__r.Servicio__r.Tipo_Servicio__c) &lt;&gt; TEXT(Oportunidad__r.Servicio__r.Tipo_Servicio__c)
	),TRUE,FALSE)
, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ServicioDiferente</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Servicio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Informar si el convenio aplica para un sólo tipo de servicio</inlineHelpText>
        <label>Servicio</label>
        <referenceTo>Servicio__c</referenceTo>
        <relationshipLabel>NOCs</relationshipLabel>
        <relationshipName>NOCs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subclasificacion_Jornadas__c</fullName>
        <inlineHelpText>Campo obligatorio si tipo= Jornadas y otros eventos</inlineHelpText>
        <label>Subclasificación Jornadas</label>
        <picklist>
            <picklistValues>
                <fullName>Charlas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coloquios</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desayunos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Encuentros técnicos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornadas de centro</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seminarios</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subida_anual_tarifas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subida anual tarifas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tarifa_oficial__c</fullName>
        <formula>IF( RecordType.DeveloperName=&apos;NOC_11_Descuento_Personal_Renegociado&apos;, Oportunidad_renegociada__r.Tarifa__r.Precio__c+ Oportunidad_renegociada__r.Precio_Plus__c , Oportunidad__r.Tarifa__r.Precio__c + Oportunidad__r.Precio_Plus__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>IVA incluido</inlineHelpText>
        <label>Tarifa oficial + plus</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tarifas_Competencia__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tarifas Competencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tipo_Habitacion__c</fullName>
        <label>Tipo Habitación</label>
        <picklist>
            <picklistValues>
                <fullName>HD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suite</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI Baño Compartido</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HD Uso Individual</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo__c</fullName>
        <label>Tipo</label>
        <picklist>
            <picklistValues>
                <fullName>Acuerdo Comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acuerdo Comisionamiento</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fidelización</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jornada y otros eventos</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medio de comunicación</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Otros</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renegociación precio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Convenio no comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estrategia comercial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Tipo_de_estancia_NT__c</fullName>
        <formula>TEXT( Nueva_Tarifa__r.Servicio__r.Tipo_Estancia__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de estancia</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_intervencion__c</fullName>
        <label>Tipo de intervención</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_ocupacion_NT__c</fullName>
        <formula>TEXT( Nueva_Tarifa__r.Servicio__r.Tipo_Ocupacion__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tipo de ocupación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tipo_de_presetnacion__c</fullName>
        <inlineHelpText>Campo obligatorio si tipo solicitud=presentación</inlineHelpText>
        <label>Tipo de presetnación</label>
        <picklist>
            <picklistValues>
                <fullName>Técnica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporativa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>